@@ -383,3 +383,11 @@ export const POPUP_ADDED_TAB = 'popup:addtabed';
  * @api
  */
 export const POPUP_REMOVED_TAB = 'popup:removedtab';
+
+/**
+ * Evento que se produce cuando se cambia la rotación de una capa.
+ * @public
+ * @type {string}
+ * @api
+ */
+export const CHANGE_ROTATION = 'change:rotation';
